Address comments from code review

--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This guide demonstrates two working examples of gate cuts with the `qiskit-addon-cutting` package. It covers using gate cutting to reduce the circuit width (the number of qubits) and circuit depth (the number of circuit instructions). The gate cutting enables reconstructing a four-qubit circuit using two two-qubit subexperiments.\n",
     "\n",
-    "The first example uses the [`EfficentSU2`](/api/qiskit/qiskit.circuit.library.efficient_su2) ansatz and reconstructs the following observable:"
+    "The first example uses the [`efficient_su2`](/api/qiskit/qiskit.circuit.library.efficient_su2) ansatz and reconstructs the following observable:"
    ]
   },
   {
@@ -205,10 +205,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reconstructed expectation value: 0.51680601\n",
+      "Reconstructed expectation value: 0.59725535\n",
       "Exact expectation value: 0.56254612\n",
-      "Error in estimation: -0.04574012\n",
-      "Relative error in estimation: -0.0813091\n"
+      "Error in estimation: 0.03470923\n",
+      "Relative error in estimation: 0.06170023\n"
      ]
     }
    ],
@@ -244,6 +244,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e217cb7-83da-4bd7-8c9e-8f1e0400616c",
+   "metadata": {},
+   "source": [
+    "<Admonition type=\"caution\" title=\"Note about observable coefficients\">\n",
+    "    To accurately reconstruct the expectation value, the coefficients of the original observable (which are different from the output of `generate_cutting_experiments()`) must be applied to the output of the reconstruction since this information was lost when the cutting experiments were generated or when the observable was expanded.\n",
+    "\n",
+    "    Typically these coefficients can be applied through `numpy.dot()` as shown above.\n",
+    "</Admonition>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1a04014c-a9a4-42e6-b268-d5c8fe7b2b94",
    "metadata": {},
    "source": [
@@ -251,12 +263,12 @@
     "\n",
     "The following workflow reduces a circuit's depth by cutting distant gates, avoiding a large series of swap gates that would otherwise be introduced.\n",
     "\n",
-    "Start with the [`EfficientSU2`](/api/qiskit/qiskit.circuit.library.EfficientSU2) ansatz, but with \"circular\" entanglement in order to introduce distant gates. Here you will define the same observable to measure as the previous example."
+    "Start with the [`efficient_su2`](/api/qiskit/qiskit.circuit.library.efficient_su2) ansatz, but with \"circular\" entanglement in order to introduce distant gates. Here you will define the same observable to measure as the previous example."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "deb97473-a17b-4208-91a7-831b12303258",
    "metadata": {},
    "outputs": [
@@ -354,10 +366,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reconstructed expectation value: 0.51855469\n",
+      "Reconstructed expectation value: 0.53051758\n",
       "Exact expectation value: 0.50497603\n",
-      "Error in estimation: 0.01357866\n",
-      "Relative error in estimation: 0.0268897\n"
+      "Error in estimation: 0.02554155\n",
+      "Relative error in estimation: 0.05057972\n"
      ]
     }
    ],
