--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -229,7 +229,7 @@
     "\n",
     "| Option |  Choices | Description | Default |\n",
     "| -----| -----------| -------- | ------- |\n",
-    "| `estimate_time_only` |  `\"analytical\"`  / `\"empirical\"` / None  | When set, the QESEM job will only calculate the QPU time estimation. Please see description below for more details. When set to None, the circuit will be executed with QESEM| None |\n",
+    "| `estimate_time_only` |  `\"analytical\"`  / `\"empirical\"` / None  | When set, the QESEM job will only calculate the QPU time estimation. Please see the following description for more details. When set to None, the circuit will be executed with QESEM| None |\n",
     "|`default_precision` | 0 < float | Will apply to `pubs` that don't have presicion. The precision signifies the acceptable error on the expectation values of the observables in absolute value.  Namely, the QPU runtime for mitigation will be determined to provide output values for all the observables of interest that fall within a `1σ` confidence interval of the target precision. If multiple observables are provided, the mitigation will run until the target precision is reached for each of the input observables. | 0.02|\n",
     "|`max_execution_time` | 0 < integer < 28,800 (8 hours)| Allows you to limit the QPU time, specified in seconds, to be used for the entire QESEM process. Please find additional details below.| 3,600 (one hour)|\n",
     "| `transpilation_level` | 0 / 1 | See description below | 1|\n",
