--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "## Example\n",
     "\n",
-    "To get started, try this basic example of estimating the required QPU time to run the QESEM for a given `pub`:"
+    "To get started, try this basic example of estimating the required QPU time to run QESEM for a given `pub`:"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "job = qesem_function.run(\n",
     "    pubs=[(circ, [avg_magnetization, other_observable])],\n",
     "    options={\n",
-    "        \"estimate_time_only\": True,\n",
+    "        \"estimate_time_only\": \"analytical\",\n",
     "    },\n",
     "    instance=instance,  # E.g. \"ibm-q/open/main\"\n",
     "    backend_name=backend_name,  # E.g. \"ibm_brisbane\"\n",
@@ -220,7 +220,7 @@
     "| `pubs` | [EstimatorPubLike](https://docs.quantum.ibm.com/guides/primitive-input-output) |This is the main input. The `Pub` contains 2-4 elements: a circuit, one or more observables, 0 or a single set of parameter values, and an optional precision. If a precision was not specified, then the `default_precision` from `options` will be used|  Yes|  N/A |  `[(circuit, [obs1,obs2,obs3], parameter_values, 0.03)]`  |\n",
     "| `backend_name`| string|Name of the backend to use |No | QESEM will get least busy device reported by IBM| `\"ibm_fez\"`|\n",
     "| `instance` | string|  The hub/group/project to use in that format |  No |  N/A | `“hub1/group1/project1”`  |\n",
-    "| `options` | dictionary |Input options. See **Options** section for more details. | No |  See the **Options** section for details.    |  `{ default_precision = 0.03, \"max_execution_time\" = 3600, \"transpilation_level\" = 0, \"estimate_time_only\" = False}`  |\n",
+    "| `options` | dictionary |Input options. See **Options** section for more details. | No |  See the **Options** section for details.    |  `{ default_precision = 0.03, \"max_execution_time\" = 3600, \"transpilation_level\" = 0}`  |\n",
     "\n",
     "\n",
     "\n",
@@ -229,24 +229,35 @@
     "\n",
     "| Option |  Choices | Description | Default |\n",
     "| -----| -----------| -------- | ------- |\n",
-    "| `estimate_time_only` |  True / False  | Specifies whether to execute the mitigation process or only get QPU time estimation. Please note that the QPU time estimation process does not consume QPU time.| False|\n",
+    "| `estimate_time_only` |  `\"analytical\"`  / `\"empirical\"` / None  | When set, the QESEM job will only calculate the QPU time estimation. Please see the following description for more details. When set to None, the circuit will be executed with QESEM| None |\n",
     "|`default_precision` | 0 < float | Will apply to `pubs` that don't have presicion. The precision signifies the acceptable error on the expectation values of the observables in absolute value.  Namely, the QPU runtime for mitigation will be determined to provide output values for all the observables of interest that fall within a `1σ` confidence interval of the target precision. If multiple observables are provided, the mitigation will run until the target precision is reached for each of the input observables. | 0.02|\n",
     "|`max_execution_time` | 0 < integer < 28,800 (8 hours)| Allows you to limit the QPU time, specified in seconds, to be used for the entire QESEM process. Please find additional details below.| 3,600 (one hour)|\n",
     "| `transpilation_level` | 0 / 1 | See description below | 1|\n",
+    "| `execution_mode` | `\"session\"` / `\"batch\"` | See following description | \"batch\"|\n",
+    "\n",
     "\n",
     "<Admonition type=\"caution\">The QPU time estimation changes from one backend to another. Therefore, when executing the QESEM function, make sure to run it on the same backend that was selected when obtaining the QPU time estimation. </Admonition>\n",
     "\n",
     "<Admonition type=\"note\">QESEM will end its run when it reaches the target precision or when it reaches `max_execution_time`, whichever comes first. </Admonition>\n",
     "\n",
+    "- `estimate_time_only` - This flag enables users to obtain an estimate for the QPU time required to execute the circuit with QESEM.\n",
+    "    - If set to `\"analytical\"`, an upper bound of the QPU time is calculated without consuming any QPU usage. This estimation has a 30-minute resolution (e.g., 30 minutes, 60 minutes, 90 minutes, etc.). It is typically pessimistic, and can only be obtained for single Pauli observables or sums of Paulis without intersecting supports (e.g. Z0+Z1). It is primarily useful for comparing the complexity levels of different parameters provided by the user (circuit, accuracy, etc.).\n",
+    "    - To obtain a more accurate QPU time estimation, set this flag to `\"empirical\"`. Although this option requires running a small number of circuits, it provides a significantly more accurate QPU time estimation. This estimation has a 5-minute resolution (e.g., 20 minutes, 25 minutes, 30 minutes, etc.). The user may choose to run the empirical time estimation in either batch or session mode. For more details, please see the `execution_mode` description. For example, in batch mode, empirical time estimation will consume less than 10 minutes of QPU time.\n",
+    "\n",
     "- `max_execution_time`: Allows you to limit the QPU time, specified in seconds, to be used for the entire QESEM process. Since the final QPU time required to reach the target accuracy is determined dynamically during the QESEM job, this parameter enables you to limit the cost of the experiment. If the dynamically-determined QPU time is shorter than the time allocated by the user, this parameter will not affect the experiment. The `max_execution_time` parameter is particularly useful in cases where the analytical time estimate provided by QESEM before the job starts is too pessimistic and the user wants to initiate a mitigation job anyway. After the time limit it reached, QESEM stops sending new circuits. Circuits that have already been sent continue running (so the total time may surpass the limit by up to 30 minutes), and the user receives the processed results from the circuits that ran up to that point. If you want to apply a QPU time limit shorter than the analytical time estimate, consult with Qedma to obtain an estimate for the accuracy achievable within the time limit.\n",
     "\n",
+    "- `transpilation_level`: After a circuit is submitted to QESEM, it automatically prepares several alternative circuit transpilations and chooses the one that minimizes QPU time. For instance, alternative transpilations might utilize Qedma-optimized fractional RZZ gates to reduce the circuit depth. Of course, all transpilations are equivalent to the input circuit, in terms of their ideal output. To exert more control over the circuit transpilation, set the transpilation level in the `options`. While `\"transpilation_level\": 1` corresponds to the default behavior described above, `\"transpilation_level\": 0` includes only minimal modifications required to the original circuit; for example, ‘layerification’ - the organization of circuit operations into ‘layers’ of simultaneous two-qubit gates. Note that automatic hardware-mapping onto high-fidelity qubits is applied in any case.\n",
     "\n",
-    "- `transpilation_level`: After a circuit is submitted to QESEM, it automatically prepares several alternative circuit transpilations and chooses the one that minimizes QPU time. For instance, alternative transpilations might utilize Qedma-optimized fractional RZZ gates to reduce the circuit depth. Of course, all transpilations are equivalent to the input circuit, in terms of their ideal output. To exert more control over the circuit transpilation, set the transpilation level in the `options`. While `\"transpilation_level\": 1 ` corresponds to the default behavior described above, `\"transpilation_level\": 0 ` includes only minimal modifications required to the original circuit; for example, ‘layerification’ - the organization of circuit operations into ‘layers’ of simultaneous two-qubit gates. Note that automatic hardware-mapping onto high-fidelity qubits is applied in any case.\n",
-    "\n",
-    "| `transpilation_level` | description |\n",
+    "| transpilation_level | Description |\n",
     "|:-:|:--|\n",
     "| `1` | Default QESEM transpilation. Prepares several alternative transpilations and chooses the one that minimizes QPU time. Barriers may be modified in the layerification step. |\n",
     "| `0` | Minimal transpilation: the mitigated circuit will closely resemble the input circuit structurally. Circuits provided in level 0 should match the device connectivity and should be specified in terms of the following gates: CX, Rzz(α), and standard single-qubit gates (U, x, sx, rz, and so on). Barriers will be respected in the layerification step. |\n",
+    "\n",
+    "- `execution_mode` - The user can choose to run the QESEM job in either a dedicated [IBM session](/guides/sessions) or across multiple [IBM batches](/guides/run-jobs-batch):\n",
+    "    -   **Session Mode**: Sessions are more expensive but result in a shorter time-to-result. Once the session begins, the QPU is reserved exclusively for the QESEM job. The usage calculation includes both the time spent on QPU execution and the associated classical computations (performed by QESEM and IBM). The QESEM Qiskit Function takes care of creating and closing the session automatically. For users with unlimited access to QPUs (for example, on-premises setups), it is recommended to use session mode for faster QESEM execution.\n",
+    "    -   **Batch Mode**: In batch mode, the QPU is released during classical computations, leading to lower QPU usage. As batch jobs typically span a longer period, there is a greater risk of hardware drifts; QESEM incorporates measures to detect and compensate for drifts, retaining reliability over extended runs.\n",
+    "\n",
+    "\n",
     "\n",
     "<Admonition type=\"note\">\n",
     "Barriers operations are typically used to specify the layers of two-qubit gates in quantum circuits. In level 0, QESEM preserves the layers specified by the barriers. In level 1, the layers specified by the barriers are considered as one transpilation alternative when minimizing QPU time.\n",
@@ -271,7 +282,7 @@
     "\n",
     "- The `metadata` field contains PUB-level metadata (`PubResult.metadata`).\n",
     "\n",
-    "The following code snippet describes how to retrieve the QPU time estimation (i.e., `estimate_time_only` is True):"
+    "The following code snippet describes how to retrieve the QPU time estimation (`estimate_time_only` is set):"
    ]
   },
   {
@@ -298,7 +309,7 @@
    "id": "a9e51542",
    "metadata": {},
    "source": [
-    "The following code snippet describes how to retrieve the mitigation results (i.e., `estimate_time_only` is False)."
+    "The following code snippet describes how to retrieve the mitigation results (`estimate_time_only` is not set)."
    ]
   },
   {
