--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -54,7 +54,7 @@ The basic workflow for batches and sessions is similar:
    </Admonition>
 3. If the maximum TTL value is reached, the workload ends and any remaining queued jobs fail. However, any jobs already running will run to completion.
 
-The following video illustrates the session basic workflow, using sessions as an example:
+The following video illustrates the basic workflow, using sessions as an example:
 
 <video title="A user starts a session job and becomes the priority user.  They submit jobs to the QPU while other users wait. After the prioritized user's session finishes, the next person's jobs can begin processing." className="max-w-auto h-auto" controls>
   <source src="/videos/guides/sessions/demo.mp4" type="video/mp4"></source>
