--- a/docs/guides/choose-execution-mode.mdx
+++ b/docs/guides/choose-execution-mode.mdx
@@ -6,7 +6,7 @@ description: Choose the right execution mode for Qiskit Runtime; sessions, batch
 <span id="sessions-versus-batch-usage" />
 # Choose the right execution mode
 
-Utility-scale workloads can take many hours to complete, so it is important that both the classical and quantum resources are scheduled efficiently to streamline the execution. Execution modes provide flexibility in balancing the cost and time tradeoff to use resources optimally for your workloads. There are several aspects to consider when choosing which execution mode to use, such as _usage_, overall execution time (maximum time to live, or TTL), and time between jobs (interactive TTL).
+Utility-scale workloads can take many hours to complete, so it is important that both the classical and quantum resources are scheduled efficiently to streamline the execution. Execution modes provide flexibility in balancing the cost and time tradeoff to use resources optimally for your workloads. There are several aspects to consider when choosing which execution mode to use, such as overall execution time (maximum time to live, or TTL) and time between jobs (interactive TTL).
 
 The the benefits of each are summarazed below:
 
@@ -71,4 +71,5 @@ In this case, all jobs (which are related but independant) are available at the 
 <Admonition type="tip" title="Recommendations">
     - [Run a job in batch mode.](/guides/run-jobs-batch/)
     - [Run a job in session mode.](/guides/run-jobs-session)
+    - [Estimate job run time.](/guides/estimate-job-run-time)
 </Admonition>
