--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -8,6 +8,17 @@ description: How to run quantum computing jobs in batch mode using Qiskit Runtim
 
 Use batch mode to submit multiple primitive jobs simultaneously. Following are examples of working with batches.
 
+## Set up to use batches
+
+Before starting a batch, you must [set up Qiskit Runtime](./install-qiskit) and initialize it as a service:
+
+``` python
+from qiskit_ibm_runtime import QiskitRuntimeService, Batch, SamplerV2 as Sampler, EstimatorV2 as Estimator
+
+service = QiskitRuntimeService()
+```
+
+
 ## Open a batch
 
 You can open a runtime batch by using the context manager `with Batch(...)` or by initializing the `Batch`
@@ -23,9 +34,9 @@ backend = service.least_busy(operational=True, simulator=False)
 batch = Batch(backend=backend)
 estimator = Estimator(mode=batch)
 sampler = Sampler(mode=batch)
+# Close the batch because no context manager was used.
 batch.close()
 ```
-
 
 **Context manager**
 
@@ -94,6 +105,24 @@ print(f"Result2: {job2.result()}")
 batch.close()
 ```
 
+<span id="batch-details"></span>
+## Determine batch details
+
+For a comprehensive overview of a batch's configuration and status, including its interactive and max TTL, use the  `batch.details() method`.
+
+``` python
+from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
+
+service = QiskitRuntimeService()
+backend = service.least_busy(operational=True, simulator=False)
+
+with Batch(backend=backend) as batch:
+    sampler = Sampler()
+    for partition in partitions:
+        job = sampler.run(partition)
+    print(batch.details())
+```
+
 <span id="partition"></span>
 ## Reconfigure jobs for parallel processing
 
@@ -116,30 +145,11 @@ There are multiple ways you can reconfigure your jobs to take advantage of the p
          jobs.append(job)
 ```
 
-
 <Admonition type="caution">
     If you set `backend=backend` in a primitive, the program is run in job mode, even if it's inside a batch or session context. Setting `backend=backend` is deprecated as of IBM Qiskit Runtime 0.24.0.  Instead, use the `mode` parameter.
 </Admonition>
 
-<span id="batch-details"></span>
-## Determine batch details
-
-For a comprehensive overview of a batch's configuration and status, including its interactive and max TTL, use the  `batch.details() method`.
-
-``` python
-from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
-
-service = QiskitRuntimeService()
-backend = service.least_busy(operational=True, simulator=False)
-
-with Batch(backend=backend) as batch:
-    sampler = Sampler()
-    for partition in partitions:
-        job = sampler.run(partition)
-    print(batch.details())
-```
-
-
+## Next steps
 
 <Admonition type="tip" title="Recommendations">
   - Try an example in the [Combine error mitigation options with the estimator primitive](https://learning.quantum.ibm.com/tutorial/combine-error-mitigation-options-with-the-estimator-primitive) tutorial.
