--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -94,7 +94,8 @@ Scroll to see the full table.
 |                      | [pec](/api/qiskit-ibm-runtime/options-pec-options)   | max_overhead            |  `None`/ integer >1          | `100`                      |                      |
 |                      |                          | noise_gain              |  `auto`/ float in the range `[0, 1]`                                                     | `auto`                    |                      |
 |                      | zne_mitigation  | `True`/`False`                                                                         | `False`                     |                      |
-|                      | [zne](/api/qiskit-ibm-runtime/options-zne-options)   | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea                              `  | `gate_folding` |                      |
+|                      | [zne](/api/qiskit-ibm-runtime/options-zne-options)   |                    |                                |   |                      |
+|                      |                          | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea`                                | `gate_folding` |                      |
 |                      |                          | extrapolated_noise_factors |         list of floats  |  `[0, *noise_factors]`|                      |
 |                      |                          | extrapolator            | one or more of `exponential`<br />`linear`<br />`double_exponential`<br />`polynomial_degree_(1 <= k <= 7)`<br />`fallback` | (`exponential`, `linear`) |                      |
 |                      |                          | noise_factors           |   list of floats; each float >= 1     | `(1, 1.5, 2)` for PEA, and `(1, 3, 5)` otherwise. |                      |
