move pec options

--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -91,7 +91,8 @@ Scroll to see the full table.
 |                      | [measure_noise_learning](/api/qiskit-ibm-runtime/options-measure-noise-learning-options)   | num_randomizations      |  integer >= 1  | `32`                      |                      |
 |                      |                          | shots_per_randomization |  integer                                                                                | 'auto'                    |                      |
 |                      | pec_mitigation           |                         | `True`/`False`                                                                        | `False`                      |                      |
-|                      | [pec](/api/qiskit-ibm-runtime/options-pec-options)   | max_overhead            |  `None`/ integer >1          | `100`                      |                      |
+|                      | [pec](/api/qiskit-ibm-runtime/options-pec-options)   |             |             |                        |                      |
+|                      |                          | max_overhead            |  `None`/ integer >1          | `100`                      |                      |
 |                      |                          | noise_gain              |  `auto`/ float in the range `[0, 1]`                                                     | `auto`                    |                      |
 |                      | zne_mitigation  | `True`/`False`                                                                         | `False`                     |                      |
 |                      | [zne](/api/qiskit-ibm-runtime/options-zne-options)   |                    |                                |   |                      |
