--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Get started with circuit cutting using gate cuts\n",
     "\n",
-    "This guide demonstrates two working examples of gate cuts with the `qiskit-addon-cutting` package. It covers using gate cutting to reduce the circuit width (the number of qubits) and circuit depth (the number of circuit instructions). The gate cutting enables reconstructing a four-qubit circuit using two two-qubit subexperiments.\n",
+    "This guide demonstrates two working examples of gate cuts with the `qiskit-addon-cutting` package. The first example shows how to reduce circuit depth (the number of circuit instructions) by cutting entangling gates on non-adjacent qubits that would otherwise incur a SWAP overhead when transpiled to hardware. The second example covers how to use gate cutting to reduce the circuit width (the number of qubits) by splitting a circuit into several circuits with fewer qubits. \n",
     "\n",
     "The first example uses the [`efficient_su2`](/api/qiskit/qiskit.circuit.library.efficient_su2) ansatz and reconstructs the following observable:"
    ]
