--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -549,7 +549,7 @@
     "print(f\"The bytes in `beta` after shot-wise slicing:\\n{beta_sl_shots.array}\\n\")\n",
     "\n",
     "# calculate the expectation value of diagonal operators on `beta`\n",
-    "ops = [\"ZZZZZZZZZ\", \"IIIIIIIIZ\"]\n",
+    "ops = [SparsePauliOp(\"ZZZZZZZZZ\"), SparsePauliOp(\"IIIIIIIIZ\")]\n",
     "exp_vals = data.beta.expectation_values(ops)\n",
     "for o, e in zip(ops, exp_vals):\n",
     "    print(f\"Exp. val. for observable `{o}` is: {e}\")\n",
