--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -50,7 +50,7 @@ expectation values of observables corresponding to physical quantities or cost f
 
 ### Manage jobs
 * [Monitor or cancel a job](./monitor-job)
-* [Estimate job run time](./estimate-job-run-time)
+* [Workload usage](./estimate-job-run-time)
 * [Minimize job run time](./minimize-time)
 * [Maximum execution time](./max-execution-time)
 * [Job limits](./job-limits)
