--- a/docs/guides/estimate-job-run-time.mdx
+++ b/docs/guides/estimate-job-run-time.mdx
@@ -29,6 +29,7 @@ When a job is failed or canceled, the reported usage is as follows:
 
 * Session mode: The reported usage is the wall-clock time from the when the first job started executing in the session until the session terminates, regardless of the number of jobs that fail or are canceled.
 
+<span id="view-usage"></span>
 ## Determine a workload's actual usage
 
 After a workload has completed, there are several ways to view its actual usage:
