fix classifier name in the comment

--- a/docs/guides/multiverse-computing-singularity.ipynb
+++ b/docs/guides/multiverse-computing-singularity.ipynb
@@ -950,7 +950,7 @@
     ")\n",
     "\n",
     "# or you can delete from the shared data directory\n",
-    "# catalog.file_delete(\"classifier_name.pkl.tar\", singularity)\n",
+    "# catalog.file_delete(\"my_classifier.pkl.tar\", singularity)\n",
     "\n",
     "print(job.result())"
    ]
