--- a/docs/migration-guides/metapackage-migration.mdx
+++ b/docs/migration-guides/metapackage-migration.mdx
@@ -1,5 +1,5 @@
 ---
-title: Understand the breaking packaging changes
+title: Understand the breaking package changes
 description: Understand the packaging changes that occurred with the release of Qiskit v1.0
 ---
 
