--- a/docs/migration-guides/index.mdx
+++ b/docs/migration-guides/index.mdx
@@ -8,9 +8,10 @@ description: Migrate to using the newest from Qiskit and Qiskit Runtime
 
 These migration guides help you more effectively use Qiskit and Qiskit Runtime:
 
-* Migrate to Qiskit 1.0
-   * [Qiskit 1.0 packaging changes](./qiskit-1.0-installation)
-   * [Qiskit 1.0 feature changes](./qiskit-1.0-features)
+* Migrate to Qiskit v1.0
+   * [Install the new Qiskit v1.0 package](./qiskit-1.0-installation)
+   * [Overview of Qiskit v1.0 packaging changes](./metapackage-migration)
+   * [Qiskit v1.0 feature changes](./qiskit-1.0-features)
 * [Migrate to the Qiskit Runtime V2 primitives](./v2-primitives)
 * [Qiskit Runtime execution mode changes](./sessions)
 * Migrate to Qiskit Runtime
