Apply suggestions from code review

--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -53,7 +53,7 @@ The basic workflow for batches and sessions is similar:
    <Admonition type="note">
    The job must go through the normal queue to reactivate the workload.
    </Admonition>
-3. If the maximum TTL value is reached, the workload ends and any remaining queued jobs fail. In IBM Quantum Platform, any jobs already running will run to completion.  However, if you are using Qiskit Runtime on IBM Cloud, jobs won't run to completion if doing so would exceed the instance's cost limit.
+3. If the maximum TTL value is reached, the workload ends and any remaining queued jobs fail. In IBM Quantum&trade; Platform, any jobs already running will run to completion.  However, if you are using Qiskit Runtime on IBM Cloud&reg;, jobs won't run to completion if doing so would exceed the instance's cost limit.
 
 The following video illustrates the basic workflow, using sessions as an example:
 
