--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -52,7 +52,7 @@ Qiskit Runtime is designed to use additional classical and quantum compute resou
 
 Qiskit Runtime also includes three types of execution modes for running your quantum program on IBM hardware: [_Job_, _Session_, and _Batch_,](/guides/execution-modes) each of which have different use cases and implications for the quantum job queue. A Job is a single query to a primitive that can be run over a specified number of shots. Sessions allow you to efficiently run multiple jobs in iterative workloads on quantum computers. Batch mode allows you to submit all your jobs at once for parallel processing.
 
-To quickly install Qiskit Runtime, run the following command
+To quickly install Qiskit Runtime, run the following command:
 ```bash
 pip install qiskit-ibm-runtime
 ```
