--- a/docs/guides/max-execution-time.mdx
+++ b/docs/guides/max-execution-time.mdx
@@ -9,7 +9,7 @@ description: Describes how long a Qiskit Runtime job can run, regardless of what
 To ensure fairness and help control costs, there is a maximum amount of time each Qiskit Runtime job can run. If a job exceeds this time limit, it is forcibly canceled and a `RuntimeJobMaxTimeoutError` exception is raised.
 
  <Admonition>
-   If you use Qiskit Runtime on IBM Cloud, the session or batch is immediately terminated when the cost limit is reached.
+   If you use Qiskit Runtime on IBM Cloud&reg;, the session or batch is immediately terminated when the cost limit is reached.
 </Admonition>
 
 <span id="max-job"></span>
@@ -57,7 +57,7 @@ When a batch is started, it is assigned a maximum time to live (maximum TTL) val
 
 Batches also have an interactive time to live (interactive TTL) value between jobs that cannot be configured. If you don't explicitly close a batch, it is deactivated after the interactive TTL expires and can be reactivated at any time until it reaches its  maximum TTL.
 
-For instructions to work with these values, see [Run jobs in a batch.](./run-jobs-batch)
+For instructions to work with these values, see [Run jobs in a batch.](/guides/run-jobs-batch)
 
 <span id="session-max-time"></span>
 ## Session maximum execution time
@@ -66,7 +66,7 @@ When a session is started, it is assigned a maximum TTL value that determines ho
 
 There is also an interactive TTL value that cannot be configured.  If no session jobs are queued within that window, the session is temporarily deactivated.
 
-For instructions to work with these values, see [Run jobs in a session.](./run-jobs-session)
+For instructions to work with these values, see [Run jobs in a session.](/guides/run-jobs-session)
 
 ## Other limitations
 
