--- a/docs/migration-guides/qiskit-quantum-instance.mdx
+++ b/docs/migration-guides/qiskit-quantum-instance.mdx
@@ -132,7 +132,7 @@ primitives expose a similar setting through their interface:
 | Job management: `job_callback`, `max_job_retries`, `timeout`, `wait` | Does not apply | Does not apply | Sessions, callback (**) | No |
 
 (\*) For more information about error mitigation and setting options on Qiskit Runtime primitives, see
-[Advanced Runtime Options](/guides/runtime-options-overview).
+[Advanced Runtime Options.](/guides/runtime-options-overview)
 
 (\*\*) For more information about sessions, see [Introduction to execution modes.](/guides/execution-modes)
 
