--- a/docs/guides/manage-cost.mdx
+++ b/docs/guides/manage-cost.mdx
@@ -9,7 +9,7 @@ description: How to manage costs of running jobs on QPUs when using the Standard
 The IBM Cloud&reg; Quantum Standard plan is not free, except when running jobs on simulators. Use the information in this topic to help you understand how much you’re paying and how to limit your costs.
 
 <Admonition type="note">
-  The information in this topic only applies to those who are using the Standard plan for Qiskit Runtime on IBM Cloud&reg;.  There are no costs associated with IBM Quantum&trade; Platform Open plan.
+  The information in this topic only applies to those who are using the Standard plan for Qiskit Runtime on IBM Cloud&reg;.  There are no costs associated with the IBM Quantum&trade; Platform Open Plan.
 </Admonition>
 
 ## Set a cost limit
