Apply suggestions from code review

--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -122,7 +122,7 @@
     "Now that the cut gate instructions have been added, the subexperiments will have a smaller depth after transpilation than the original circuit. The code snippet below generates the subexperiments using the [`generate_cutting_experiments`](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) method as before, but for this example, use the `qpd_circuit` instead of dictionaries since you did not partition the problem.\n",
     "\n",
     "<Admonition type=\"note\" title=\"Note about the number of samples\">\n",
-    "    The `num_samples` argument specifies how many samples to draw from the quasiprobability distribution and determines the accuracy of the coefficients used for the reconstruction. Passing infinity (`np.inf`) will ensure all coefficients are calculated exactly. Read the API docs on [generating weights](/api/qiskit-addon-cutting/qpd#generate_qpd_weights) and [generating cutting experiments](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) for more information.\n",
+    "    The `num_samples` argument specifies how many samples to draw from the quasi-probability distribution and determines the accuracy of the coefficients used for the reconstruction. Passing infinity (`np.inf`) will ensure all coefficients are calculated exactly. Read the API docs on [generating weights](/api/qiskit-addon-cutting/qpd#generate_qpd_weights) and [generating cutting experiments](/api/qiskit-addon-cutting/qiskit-addon-cutting#generate_cutting_experiments) for more information.\n",
     "</Admonition>\n",
     "\n",
     "Once the subexperiments are generated, you can then transpile them, then use the `Sampler` primitive to sample the distribution and reconstruct the estimated expectation values. The following code block generates, transpiles, and executes the subexperiments. It then reconstructs the results and compares them to the exact expectation value."
@@ -200,7 +200,7 @@
     "<Admonition type=\"caution\" title=\"Note about observable coefficients\">\n",
     "    To accurately reconstruct the expectation value, the coefficients of the original observable (which are different from the output of `generate_cutting_experiments()`) must be applied to the output of the reconstruction since this information was lost when the cutting experiments were generated or when the observable was expanded.\n",
     "\n",
-    "    Typically these coefficients can be applied through `numpy.dot()` as shown above.\n",
+    "    Typically these coefficients can be applied through `numpy.dot()` as shown previously.\n",
     "</Admonition>"
    ]
   },
@@ -429,7 +429,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Read the [Get started with circuit cutting using wire cuts](/guides/qiskit-addons-cutting-wires) guide.\n",
-    "    - Read the arXiv paper on [circuit knitting with classical communication](https://arxiv.org/abs/2205.00016)\n",
+    "    - Read the arXiv paper on [circuit knitting with classical communication.](https://arxiv.org/abs/2205.00016)\n",
     "</Admonition>"
    ]
   }
