--- a/docs/guides/qiskit-addons-cutting-wires.ipynb
+++ b/docs/guides/qiskit-addons-cutting-wires.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "## Cut wires using the high-level `CutWire` instruction\n",
     "\n",
-    "We'll next make wire cuts using the single-qubit [`CutWire`](/api/qiskit-addon-cutting/instructions-cut-wire) instruction on qubit $q_3$. Once the subexperiments are prepared to be executed, use the [`cut_wires()`](/api/qiskit-addon-cutting/qiskit-addon-cutting#cut_wires) function to transform `CutWire` to [`Move`](/api/qiskit-addon-cutting/instructions-move)  instructions on newly allocated qubits."
+    "Next, make wire cuts using the single-qubit [`CutWire`](/api/qiskit-addon-cutting/instructions-cut-wire) instruction on qubit $q_3$. Once the subexperiments are prepared to be executed, use the [`cut_wires()`](/api/qiskit-addon-cutting/qiskit-addon-cutting#cut_wires) function to transform `CutWire` to [`Move`](/api/qiskit-addon-cutting/instructions-move) instructions on newly allocated qubits."
    ]
   },
   {
