--- a/docs/guides/qiskit-addons-cutting-wires.ipynb
+++ b/docs/guides/qiskit-addons-cutting-wires.ipynb
@@ -422,7 +422,7 @@
    "id": "7b4f8998-4f30-4e93-84fe-957c658df678",
    "metadata": {},
    "source": [
-    "The circuit above can now be partitioned and cutting experiments generated. To explicitly specify how the circuit should be partitioned, you can add partition labels to the `partition_problem()` function. Qubits which share a common partition label are grouped together, and any non-local gates spanning more than one partition are cut. The keys of the dictionary output by `partition_problem()` will match those specified in the label string."
+    "The circuit above can now be partitioned and cutting experiments generated. To explicitly specify how the circuit should be partitioned, you can add partition labels to the `partition_problem()` function. Qubits that share a common partition label are grouped together, and any non-local gates spanning more than one partition are cut. The keys of the dictionary output by `partition_problem()` will match those specified in the label string."
    ]
   },
   {
