--- a/docs/guides/qiskit-addons-cutting-wires.ipynb
+++ b/docs/guides/qiskit-addons-cutting-wires.ipynb
@@ -495,7 +495,7 @@
    "id": "cb356463-966f-409f-af7b-eed6506e410f",
    "metadata": {},
    "source": [
-    "At this point the cutting experiments can be generated and the expectation value reconstructed in the same way as the above section.\n",
+    "Now the cutting experiments can be generated and the expectation value reconstructed in the same way as the previous section.\n",
     "\n",
     "## Next steps\n",
     "\n",
